# Personal-NotionVisual-memory-Automation-System

./: .gitignore  20260531_feedback.html  20260603_feedback.html  20260604_feedback.html  AGENTS.md  PRD.md  README.md  pair_rules.json  pyproject.toml  sample_cases.json  visual_candidates.json
app/: admin_system_semantic.py  candidate_row.py  data_loader.py  feedback_api.py  feedback_event.py  feedback_export.py  feedback_logging.py  feedback_ranking_snapshot.py  feedback_read.py  form_interface_semantic.py  generic_tokens.py  interface_ui_semantic.py  main.py  meal_venue_context_semantic.py  models.py  notification_semantic.py  object_priority_semantic.py  p5b_feedback_analyzer.py  pair_engine.py  recommendation_logging.py  recommendation_response.py  recommender.py  reporting_review_semantic.py  schedule_semantic.py  semantic_scoring.py  specificity.py  status_reporting_semantic.py  workflow_anchor_density.py  workflow_resolution.py  workflow_stage_observation.py
data/: feedback_log.jsonl  feedback_log_examples.json  override_examples.json  override_examples_from_ui.json  pair_rules.json  sample_cases.json  visual_candidates.json
docs/: ARCHITECHURE.md  ARCHITECTURE.md  PRD.md  README.md  feedback_log_schema.md  feedback_override_taxonomy.md  feedback_override_taxonomy_proposal_20260605.md  feedback_statistics_p5b_20260606.md  feedback_ui_mvp.md  feedback_ui_smoke_test.md  p5_override_pattern_analysis.md  phase2_workflow_stage_analytics_audit.md  reporting_current_state_experiment_report.md  sample_cases_schema.md  semantic_metadata_schema.md  workflow_ontology.md  (+2 more)
(+139 files in other folders)
